# side_project_ws

./: README.md
src/action_interface/: CMakeLists.txt  package.xml
src/action_interface/action/: Fibonacci.action
src/custom_msgs/: CMakeLists.txt  package.xml
src/launch_tutorial/: package.xml  setup.py
src/launch_tutorial/launch/: example_main.launch.py  example_substitutions.launch.py
src/parameters/: package.xml  setup.py
src/parameters/parameters/: parameters.py
src/py_launch/: package.xml  setup.py
src/py_launch/launch/: my_script_launch.py
src/rviz_panel_tutorial/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
src/rviz_panel_tutorial/include/rviz_panel_tutorial/: demo_panel.hpp
src/rviz_panel_tutorial/src/: demo_panel.cpp
src/rviz_plugin_tutorial/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
src/rviz_plugin_tutorial/include/rviz_plugin_tutorial/: point_display.hpp
src/rviz_plugin_tutorial/src/: point_display.cpp
src/rviz_plugin_tutorial_msg/: CMakeLists.txt  package.xml
src/test1/: LICENSE  package.xml  setup.py
src/test1/test1/: test_node.py
src/test2/test2/: my_test.py  turtle_publisher.py
src/test2/test2/install/: local_setup.sh  setup.sh
src/test_custom_msg_srv/: CMakeLists.txt  package.xml
src/test_pub_sub/: package.xml  setup.cfg  setup.py
src/test_pub_sub/test_pub_sub/: publisher.py  subscriber.py
src/test_srv_cli/: package.xml  setup.cfg  setup.py
src/test_srv_cli/test_srv_cli/: client.py  service.py
src/tf2_test/: package.xml  setup.cfg  setup.py
src/tf2_test/launch/: dynamic_frame.launch.py  fixed_frame.launch.py  turtle_tf2.launch.py
src/tf2_test/tf2_test/: dynamic_frame_tf2_broadcsater.py  fixed_frame_tf2_broadcaster.py  static_turtle_tf2_broadcaster.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py
src/visualization/: CMakeLists.txt  package.xml
src/visualization/src/: marker_publisher.cpp
